--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -19,6 +19,18 @@
                 headers: {"X-CSRFToken": getCookie("csrftoken")},
             });
 
+            $("#room").click(function(){
+                var roomId = $("#room").attr("name");
+                $.ajax({
+                    type: 'POST',
+                    url: 'http://localhost:8080/api/v1/rooms/' + roomId,
+                    contentType: "application/json",
+                    dataType: "json",
+
+
+                })
+            });
+
             $.ajax({
                 type: 'GET',
                 url: 'http://localhost:8080/api/v1/devices',
@@ -66,7 +78,7 @@
                             '<div class="card">  ' +
                             '	<div class="card-body">' +
                             '<h5 class="card-title">' + rooms[i].name + '</h5>' +
-                            '<a href="#" class="card-link">Card link</a>    <a href="#" class="card-link">Another link</a>  </div></div></div>');
+                            '<button id="room" name="'+ rooms[i].id +'" type="button" class="btn btn-danger">Elimina</button></div></div></div>');
                     }
 
                 },
@@ -78,7 +90,7 @@
             });
             $.ajax({
                 type: 'GET',
-                url: 'http://localhost:8080/api/v1/user',
+                url: 'http://localhost:8080/api/v1/users',
                 contentType: "application/json",
                 dataType: "json",
 
@@ -94,7 +106,7 @@
                             '	<div class="card-body">' +
                             '<h5 class="card-title">' + users[i].name + '</h5>' +
                             '<h6 class="card-subtitle mb-2 text-muted">' + users[i].email + '</h6>   ' +
-                            '<a href="#" class="card-link">Card link</a>    <a href="#" class="card-link">Another link</a>  </div></div></div>');
+                            '<button type="button" class="btn btn-danger">Elimina</button></div></div></div>');
                     }
 
                 },
