--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -30,9 +30,11 @@
                     else {
                         document.getElementById('notif_div').classList.remove('notification');
                     }
+                    location.reload(true);
 
                 },
                 cache: false
+
             });
             document.getElementById("notif_ul").removeChild(li);
             if (document.getElementById("notif_ul").getElementsByTagName("li").length > 0)
@@ -46,6 +48,14 @@
 
         function notification(json) {
             document.getElementById("notif_ul").innerHTML = "";
+
+            if (json.length > 0){
+                document.getElementById("notif_div").innerHTML += "<label style='color: red; font-weight: bold'>Ci snono nuove notifiche</label>";
+            }
+            else {
+                document.getElementById("notif_div").innerHTML += "Nessuna notifica";
+            }
+
             for (let i = 0; i < json.length; i++) {
                 document.getElementById("notif_ul").innerHTML += "<li onclick=\"remove(this," + json[i]['id'] + ")\" id=\""+ json[i]['id'] +"\">" + json[i]["code"] + " - Room: " + json[i]["room"]['name'] + "</li>";
             }
@@ -255,7 +265,7 @@
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     <div class="d-none d-lg-block d-xl-block" id="notif_div"></div>
-                    Notifications
+
 
                 </a>
                 <ul class="dropdown-menu dropdown-menu-right dropdown-navbar" id="notif_ul" aria-labelledby="navbarDropdownMenuLink">
