--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -78,10 +78,9 @@
                     url:'http://localhost:8080/api/v1/rooms',
                     contentType:'application/json',
                     dataType: 'json',
-                    data: '"'+$("#text-create-room").val()+'"',
+                    data: '{ "name" : "'+$("#text-create-room").val()+'" }',
 
                     success : function(data){
-                        alert("suca");
                         console.log("aggiunta stanza");
                         window.location.reload(true) 
                         var toastLiveExample = document.getElementById('create-room-toast')
