--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -296,17 +296,12 @@
 
     <div>
         <ul class="nav justify-content-center">
-            <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#devices">Devices</a>
-            </li>
+
             <li class="nav-item">
                 <a class="nav-link" href="#rooms">Rooms</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="users">Users</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link disabled">Preferences</a>
+                <a class="nav-link" href="#users">Users</a>
             </li>
 
             <li class="nav-item dropdown">
@@ -336,14 +331,6 @@
             <div class="col-md-6">
                 
             </div>
-        </div>
-
-    </div>
-
-    <div class="container-lg" id="devices">
-        <h2>My devices</h2>
-        <div class="row" id="sub-devices">
-
         </div>
 
     </div>
@@ -391,9 +378,6 @@
 
     <br>
 
-    <div class="container" id="preferences">
-        <h2>My preferences</h2>
-    </div>
 </div>
 
 <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11">
