--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -389,9 +389,9 @@
                 </ul>
             </li>
 
-            <li class="nav-item">
+            <!--<li class="nav-item">
                 <button id="btn-alarm" class="btn btn-warning" onclick="changeAlarmStatus(this)">Attiva allarme</button>
-            </li>
+            </li>-->
 
 
         </ul>
